# tic-tac-toe-rs-cli

./: Cargo.toml
src/: main.rs
thinking_things/: wrapper.excalidraw
