[package]
name = "Tic-tac-toe-rs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# sorry, its not supposed to have dependencies
# but i need to use this for the clear screen
# and i don't want to write it myself
# cause im dumb (and lazy)
#
# FUCK
#
# oh and i don't know how to support windows
# so if you want to run this on windows
# sorry :'(
# i guess you can just run it in WSL
# or use a different terminal
# idk do what you want
clearscreen = "4.0.1"

# ANOTHER ONE
# FUUUUUUUUUUUUCK
# this is for the input
# and i don't want to write it myself
# cause im dumb (and lazy)
# and i don't want to write it myself
# cause im dumb (and lazy)
# and i don't want to write it myself
# cause im dumb (and lazy)
crossterm = "0.29.0"

# nah this is one is actually useful
# this is for the error handling
anyhow = "1.0.0"

# this is going too far
tokio = { version = "1.44.2", features = ["full"] }
